examples/test/conf/Gateway/TLS/GatewayTLS/HTTPRoute_edgion-test_gateway-tls-route.yaml
# Gateway TLS  HTTPRoute - 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-tls-route
  namespace: edgion-test
spec:
  parentRefs:
    - name: gateway-tls-test
      namespace: edgion-test
      sectionName: https
  hostnames:
    - gateway-tls.test.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
